--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "amm"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
+authors = ["Invariant Labs"]
 edition = "2021"
 
 [dependencies]
